# flare

./: pyproject.toml
src/: camera_client.py  gui.py  image_database.py  main.py
